set up 7 classification models

--- a/code.ipynb
+++ b/code.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
        "(286467, 79)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
        "(286096, 79)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
        "[5 rows x 78 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
        "Name: Label, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
        "PCA(n_components=0.9)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,27 +610,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Classification Model Prediction with PCA Components"
+    "## Classification Model Prediction"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import accuracy_score, f1_score, precision_score, recall_score, roc_curve, roc_auc_score, auc, mean_squared_error, confusion_matrix\n",
+    "from sklearn.metrics import roc_curve, auc, confusion_matrix\n",
+    "from sklearn.model_selection import cross_validate\n",
     "\n",
     "\n",
-    "def generate_metrics(y_predicted, y_predicted_proba, file_name):\n",
-    "    accuracy = accuracy_score(y_test, y_predicted)\n",
-    "    f_test_score = f1_score(y_test, y_predicted)\n",
-    "    precision_score_ = precision_score(y_test, y_predicted)\n",
-    "    recall_score_ = recall_score(y_test, y_predicted)\n",
-    "    mean_squared_error_score = mean_squared_error(y_test, y_predicted)\n",
+    "def get_cross_validation_scores(estimator):\n",
+    "    scoring = (\"accuracy\", \"f1\", \"recall\", \"precision\",\n",
+    "               \"roc_auc\", \"neg_mean_squared_error\")\n",
+    "    scores = cross_validate(estimator, x, y, scoring=scoring, cv=10)\n",
+    "    return scores\n",
+    "\n",
+    "\n",
+    "def get_predictions(estimator):\n",
+    "    estimator.fit(x_train, y_train)\n",
+    "    prediction = estimator.predict(x_test)\n",
+    "    return prediction\n",
+    "\n",
+    "\n",
+    "def generate_scores(cv_dict, y_predicted, file_name):\n",
+    "\n",
+    "    training_time = np.mean(cv_dict[\"fit_time\"])\n",
+    "    prediction_time = np.mean(cv_dict[\"score_time\"])\n",
+    "    accuracy = np.mean(cv_dict[\"test_accuracy\"])\n",
+    "    f1 = np.mean(cv_dict[\"test_f1\"])\n",
+    "    recall = np.mean(cv_dict[\"test_recall\"])\n",
+    "    precision = np.mean(cv_dict[\"test_precision\"])\n",
+    "    auc_roc = np.mean(cv_dict[\"test_roc_auc\"])\n",
+    "    mean_squared_error = np.mean(cv_dict[\"test_neg_mean_squared_error\"])\n",
+    "\n",
     "    fpr, tpr, thresholds = roc_curve(y_test, y_predicted, pos_label=1)\n",
-    "    auc_score_tr = auc(fpr, tpr)\n",
-    "    auc_roc = roc_auc_score(y_test, y_predicted_proba)\n",
+    "    auc_tr = auc(fpr, tpr)\n",
     "\n",
     "    confusion_matrix_df = pd.crosstab(\n",
     "        pd.Series(y_predicted, name=\"Predicted\"), pd.Series(y_test, name=\"Actual\"))\n",
@@ -642,13 +660,15 @@
     "\n",
     "    with open(path, \"w\") as file:\n",
     "        file.writelines([file_name,\n",
+    "                        \"\\n\\nTraining Time:\\t\\t\" + str(training_time),\n",
+    "                         \"\\nPrediction Time:\\t\" + str(prediction_time),\n",
     "                         \"\\n\\nAccuracy:    \\t\" + str(accuracy),\n",
-    "                         \"\\nF1:         \\t\" + str(f_test_score),\n",
-    "                         \"\\nRecall:     \\t\" + str(recall_score_),\n",
-    "                         \"\\nPrecision:  \\t\" + str(precision_score_),\n",
-    "                         \"\\nAUC TR:     \\t\" + str(auc_score_tr),\n",
+    "                         \"\\nF1:         \\t\" + str(f1),\n",
+    "                         \"\\nRecall:     \\t\" + str(recall),\n",
+    "                         \"\\nPrecision:  \\t\" + str(precision),\n",
+    "                         \"\\nAUC TR:     \\t\" + str(auc_tr),\n",
     "                         \"\\nAUC ROC:    \\t\" + str(auc_roc),\n",
-    "                         \"\\nMean² Err:  \\t\" + str(mean_squared_error_score),\n",
+    "                         \"\\nMean² Err:  \\t\" + str(mean_squared_error),\n",
     "                         \"\\n\\nConfusion Matrix\\n\",\n",
     "                         confusion_matrix_df.to_string(),\n",
     "                         \"\\n\\nTN:\\t\" + str(TN),\n",
@@ -659,20 +679,14 @@
     "                         ])\n",
     "\n",
     "    with open(path, \"r\") as file:\n",
-    "        print(file.read())\n"
+    "        print(file.read())\n",
+    "\n",
+    "\n",
+    "def run(estimator, model_name):\n",
+    "    cv = get_cross_validation_scores(estimator)\n",
+    "    predictions = get_predictions(estimator)\n",
+    "    generate_scores(cv, predictions, model_name)\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Random Forest"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -683,116 +697,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
-    "random_forest_pca = RandomForestClassifier(random_state=0, n_jobs=-1)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: total: 2min 31s\n",
-      "Wall time: 49.4 s\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "RandomForestClassifier(n_jobs=-1, random_state=0)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "random_forest_pca.fit(x_train, y_train)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: total: 859 ms\n",
-      "Wall time: 371 ms\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "random_forest_pca_prediction = random_forest_pca.predict(x_test)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "random_forest_pca_predict_proba = random_forest_pca.predict_proba(x_test)[:, 1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "random forest\n",
-      "\n",
-      "Accuracy:    \t0.9998951415588955\n",
-      "F1:         \t0.9999057492931196\n",
-      "Recall:     \t0.9998429253581301\n",
-      "Precision:  \t0.999968581123539\n",
-      "AUC TR:     \t0.9999017683352807\n",
-      "AUC ROC:    \t0.9999679255412643\n",
-      "Mean² Err:  \t0.00010485844110450891\n",
-      "\n",
-      "Confusion Matrix\n",
-      "Actual         0      1\n",
-      "Predicted              \n",
-      "0          25387      5\n",
-      "1              1  31827\n",
-      "\n",
-      "TN:\t25387\n",
-      "TP:\t31827\n",
-      "FN:\t5\n",
-      "FP:\t1\n",
-      "\n",
-      "Pecent of FP:\t%0.00393886875689302\n"
-     ]
-    }
-   ],
-   "source": [
-    "generate_metrics(random_forest_pca_prediction,\n",
-    "                 random_forest_pca_predict_proba, \"random forest\")\n"
+    "rf = RandomForestClassifier(n_jobs=-1, random_state=0)\n",
+    "run(rf, \"Random Forest\")\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### KNN"
+    "### Decision Tree"
    ]
   },
   {
@@ -801,118 +720,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
     "\n",
-    "knn_pca = KNeighborsClassifier(n_jobs=-1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "# knn_pca.fit(x_train_pca, y_train)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "knn_pca_prediction = knn_pca.predict(x_test_pca)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "generate_metrics(y_test, knn_pca_prediction, \"knn with pca components.txt\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### KNN using GridSearchCV"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import GridSearchCV\n",
-    "\n",
-    "param_grid = {\"n_neighbors\": np.arange(1,9)}\n",
-    "knn_gscv = GridSearchCV(knn_pca, param_grid, cv=5)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "knn_gscv.fit(x_train_pca, y_train)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"Optimal value for k is: \" + knn_gscv.best_params_)\n",
-    "print(\"Best score is: \" + knn_gscv.best_score_)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "knn_gscv_optimal = KNeighborsClassifier(\n",
-    "    n_neighbors=knn_gscv.best_params_[\"n_neighbors\"])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "knn_gscv_optimal.fit(x_train_pca, y_train)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "knn_gscv_prediction = knn_gscv_optimal.predict(x_test_pca)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "generate_metrics(y_test, knn_gscv_prediction,\n",
-    "                 \"knn_gscv with pca components.txt\")\n"
+    "dt = DecisionTreeClassifier(n_jobs=-1, random_state=0)\n",
+    "run(dt, \"Decision Tree\")\n"
    ]
   },
   {
@@ -930,36 +741,8 @@
    "source": [
     "from xgboost import XGBClassifier\n",
     "\n",
-    "xgb_pca = XGBClassifier(n_estimators=100,n_jobs =-1)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "xgb_pca.fit(x_train_pca, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "xgb_pca_prediction = xgb_pca.predict(x_test_pca)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "generate_metrics(y_test, xgb_pca_prediction, \"xgb with pca components.txt\")\n"
+    "xgb = XGBClassifier(n_jobs=-1)\n",
+    "run(xgb, \"XGBoost\")"
    ]
   },
   {
@@ -977,36 +760,8 @@
    "source": [
     "from sklearn.svm import SVC\n",
     "\n",
-    "svc_pca = SVC()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "svc_pca.fit(x_train_pca, y_train)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "svc_pca_prediction = svc_pca.predict(x_test_pca)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "generate_metrics(y_test, svc_pca_prediction, \"svm with pca components.txt\")\n"
+    "svc = SVC()\n",
+    "run(svc, \"SVM\")\n"
    ]
   },
   {
@@ -1024,37 +779,9 @@
    "source": [
     "from sklearn.naive_bayes import GaussianNB\n",
     "\n",
-    "gnb_pca = GaussianNB()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "gnb_pca.fit(x_train_pca, y_train)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "gnb_pca_prediction = gnb_pca.predict(x_test_pca)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "generate_metrics(y_test, gnb_pca_prediction,\n",
-    "                 \"naive bayes with pca components.txt\")\n"
+    "gnb = GaussianNB()\n",
+    "run(gnb, \"Gaussian Naive Bayes\")\n",
+    "\n"
    ]
   },
   {
@@ -1072,7 +799,15 @@
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
-    "log_reg_pca = LogisticRegression(n_jobs=-1, max_iter=1000)\n"
+    "lg = LogisticRegression(n_jobs=-1, max_iter=1000)\n",
+    "run(lg, \"Logistic Regression\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### KNN"
    ]
   },
   {
@@ -1081,28 +816,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "log_reg_pca.fit(x_train_pca, y_train)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "log_reg_pca_prediction = log_reg_pca.predict(x_test_pca)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "generate_metrics(y_test, log_reg_pca_prediction,\n",
-    "                 \"logistic regression with pca components.txt\")\n"
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
+    "knn = KNeighborsClassifier(n_jobs=-1)\n",
+    "run(knn, \"KNN\")"
    ]
   }
  ],
@@ -1125,7 +842,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.5"
   },
   "orig_nbformat": 4
  },
