classification ml algorithm metrics

--- a/code.ipynb
+++ b/code.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
        "(286467, 79)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
        "(286096, 79)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
        "[5 rows x 78 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
        "Name: Label, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
        "PCA(n_components=0.9)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +580,7 @@
        "17      PC18                            1.3"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,9 +697,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest\n",
+      "\n",
+      "Training Time:\t\t19.083848214149477\n",
+      "Prediction Time:\t0.17322025299072266\n",
+      "\n",
+      "Accuracy:    \t0.9998531961054924\n",
+      "F1:         \t0.9998677260515618\n",
+      "Recall:     \t0.9997795993564859\n",
+      "Precision:  \t0.9999559233605761\n",
+      "AUC TR:     \t0.9999017683352807\n",
+      "AUC ROC:    \t0.9999613165367063\n",
+      "Mean² Err:  \t-0.00014680389450752373\n",
+      "\n",
+      "Confusion Matrix\n",
+      "Actual         0      1\n",
+      "Predicted              \n",
+      "0          25387      5\n",
+      "1              1  31827\n",
+      "\n",
+      "TN:\t25387\n",
+      "TP:\t31827\n",
+      "FN:\t5\n",
+      "FP:\t1\n",
+      "\n",
+      "Pecent of FP:\t%0.00393886875689302\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
@@ -716,13 +748,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decision Tree\n",
+      "\n",
+      "Training Time:\t\t5.490688276290894\n",
+      "Prediction Time:\t0.08588058948516845\n",
+      "\n",
+      "Accuracy:    \t0.9996924110855042\n",
+      "F1:         \t0.999722927054124\n",
+      "Recall:     \t0.999748115589546\n",
+      "Precision:  \t0.9996978174139388\n",
+      "AUC TR:     \t0.9998623796477117\n",
+      "AUC ROC:    \t0.9996855150402203\n",
+      "Mean² Err:  \t-0.00030758891449564866\n",
+      "\n",
+      "Confusion Matrix\n",
+      "Actual         0      1\n",
+      "Predicted              \n",
+      "0          25385      5\n",
+      "1              3  31827\n",
+      "\n",
+      "TN:\t25385\n",
+      "TP:\t31827\n",
+      "FN:\t5\n",
+      "FP:\t3\n",
+      "\n",
+      "Pecent of FP:\t%0.011816606270679061\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.tree import DecisionTreeClassifier\n",
     "\n",
-    "dt = DecisionTreeClassifier(n_jobs=-1, random_state=0)\n",
+    "dt = DecisionTreeClassifier(random_state=0)\n",
     "run(dt, \"Decision Tree\")\n"
    ]
   },
@@ -735,9 +799,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XGBoost\n",
+      "\n",
+      "Training Time:\t\t18.026198935508727\n",
+      "Prediction Time:\t0.0737910270690918\n",
+      "\n",
+      "Accuracy:    \t0.9998392146134893\n",
+      "F1:         \t0.9998551232627181\n",
+      "Recall:     \t0.9997544116291873\n",
+      "Precision:  \t0.9999559055034115\n",
+      "AUC TR:     \t0.9999214626790651\n",
+      "AUC ROC:    \t0.9999735474529767\n",
+      "Mean² Err:  \t-0.0001607853865106916\n",
+      "\n",
+      "Confusion Matrix\n",
+      "Actual         0      1\n",
+      "Predicted              \n",
+      "0          25388      5\n",
+      "1              0  31827\n",
+      "\n",
+      "TN:\t25388\n",
+      "TP:\t31827\n",
+      "FN:\t5\n",
+      "FP:\t0\n",
+      "\n",
+      "Pecent of FP:\t%0.0\n"
+     ]
+    }
+   ],
    "source": [
     "from xgboost import XGBClassifier\n",
     "\n",
@@ -754,9 +850,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SVM\n",
+      "\n",
+      "Training Time:\t\t150.68629693984985\n",
+      "Prediction Time:\t13.960822606086731\n",
+      "\n",
+      "Accuracy:    \t0.9985878704072478\n",
+      "F1:         \t0.998728131051639\n",
+      "Recall:     \t0.9989231738035265\n",
+      "Precision:  \t0.9985378107927907\n",
+      "AUC TR:     \t0.9992448414480101\n",
+      "AUC ROC:    \t0.9995003930016184\n",
+      "Mean² Err:  \t-0.0014121295927522555\n",
+      "\n",
+      "Confusion Matrix\n",
+      "Actual         0      1\n",
+      "Predicted              \n",
+      "0          25368     23\n",
+      "1             20  31809\n",
+      "\n",
+      "TN:\t25368\n",
+      "TP:\t31809\n",
+      "FN:\t23\n",
+      "FP:\t20\n",
+      "\n",
+      "Pecent of FP:\t%0.0787773751378604\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.svm import SVC\n",
     "\n",
@@ -773,9 +901,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gaussian Naive Bayes\n",
+      "\n",
+      "Training Time:\t\t0.10538101196289062\n",
+      "Prediction Time:\t0.0487074613571167\n",
+      "\n",
+      "Accuracy:    \t0.9181113942470788\n",
+      "F1:         \t0.9302125650099349\n",
+      "Recall:     \t0.982324112174347\n",
+      "Precision:  \t0.8834659695915296\n",
+      "AUC TR:     \t0.9087201614605559\n",
+      "AUC ROC:    \t0.9812356996726443\n",
+      "Mean² Err:  \t-0.0818886057529211\n",
+      "\n",
+      "Confusion Matrix\n",
+      "Actual         0      1\n",
+      "Predicted              \n",
+      "0          21203    564\n",
+      "1           4185  31268\n",
+      "\n",
+      "TN:\t21203\n",
+      "TP:\t31268\n",
+      "FN:\t564\n",
+      "FP:\t4185\n",
+      "\n",
+      "Pecent of FP:\t%16.48416574759729\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.naive_bayes import GaussianNB\n",
     "\n",
@@ -793,9 +953,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logistic Regression\n",
+      "\n",
+      "Training Time:\t\t23.023859596252443\n",
+      "Prediction Time:\t0.023308610916137694\n",
+      "\n",
+      "Accuracy:    \t0.9966829339970193\n",
+      "F1:         \t0.9970164126212616\n",
+      "Recall:     \t0.9986335012594459\n",
+      "Precision:  \t0.995411549445483\n",
+      "AUC TR:     \t0.9964292704494405\n",
+      "AUC ROC:    \t0.9995772124988829\n",
+      "Mean² Err:  \t-0.003317066002980635\n",
+      "\n",
+      "Confusion Matrix\n",
+      "Actual         0      1\n",
+      "Predicted              \n",
+      "0          25237     38\n",
+      "1            151  31794\n",
+      "\n",
+      "TN:\t25237\n",
+      "TP:\t31794\n",
+      "FN:\t38\n",
+      "FP:\t151\n",
+      "\n",
+      "Pecent of FP:\t%0.5947691822908461\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
@@ -812,9 +1004,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KNN\n",
+      "\n",
+      "Training Time:\t\t0.056701827049255374\n",
+      "Prediction Time:\t515.5362283945084\n",
+      "\n",
+      "Accuracy:    \t0.9998566913868627\n",
+      "F1:         \t0.999870890632217\n",
+      "Recall:     \t0.9998488664987406\n",
+      "Precision:  \t0.9998929653351313\n",
+      "AUC TR:     \t0.9997875891521713\n",
+      "AUC ROC:    \t0.9999440939722982\n",
+      "Mean² Err:  \t-0.00014330861313737345\n",
+      "\n",
+      "Confusion Matrix\n",
+      "Actual         0      1\n",
+      "Predicted              \n",
+      "0          25382      6\n",
+      "1              6  31826\n",
+      "\n",
+      "TN:\t25382\n",
+      "TP:\t31826\n",
+      "FN:\t6\n",
+      "FP:\t6\n",
+      "\n",
+      "Pecent of FP:\t%0.023633212541358122\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "\n",
@@ -842,7 +1066,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4
  },
