--- a/code.ipynb
+++ b/code.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Feature Selection using Recursive Feature Elimination Model (RFE) using Random Forest, Gradient Boosting, Logistic Regression,  and SVM"
+    "# Predicting Malicious Port Scan Attacks using Machine Learning and Deep Learning"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
        "(286467, 79)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
        "(286096, 79)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
        "[5 rows x 78 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
        "Name: Label, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
        "PCA(n_components=0.9)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +580,7 @@
        "17      PC18                            1.3"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1044,6 +1044,183 @@
     "\n",
     "knn = KNeighborsClassifier(n_jobs=-1)\n",
     "run(knn, \"KNN\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Deep Learning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "x_tf = tf.keras.utils.normalize(x, axis=1)\n",
+    "\n",
+    "x_train_tf, x_test_tf, y_train_tf, y_test_tf = train_test_split(\n",
+    "    x_tf, y, test_size=0.2, random_state=0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/3\n",
+      "7153/7153 [==============================] - 11s 2ms/step - loss: 0.0179 - accuracy: 0.9963 - binary_accuracy: 0.5000\n",
+      "Epoch 2/3\n",
+      "7153/7153 [==============================] - 11s 2ms/step - loss: 0.0043 - accuracy: 0.9990 - binary_accuracy: 0.5000\n",
+      "Epoch 3/3\n",
+      "7153/7153 [==============================] - 12s 2ms/step - loss: 0.0033 - accuracy: 0.9993 - binary_accuracy: 0.5000\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x1f8b803fee0>"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dl_model = tf.keras.models.Sequential()\n",
+    "dl_model.add(tf.keras.layers.Flatten())\n",
+    "dl_model.add(tf.keras.layers.Dense(128, activation=tf.nn.relu))\n",
+    "dl_model.add(tf.keras.layers.Dense(2, activation=tf.nn.softmax))\n",
+    "\n",
+    "dl_model.compile(optimizer=\"adam\", loss=\"sparse_categorical_crossentropy\", metrics=[\n",
+    "                 \"accuracy\", \"binary_accuracy\"])\n",
+    "\n",
+    "\n",
+    "dl_model.fit(x_train_tf, y_train_tf, epochs=3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "448/448 [==============================] - 1s 2ms/step - loss: 0.0034 - accuracy: 0.9993 - binary_accuracy: 0.5000\n",
+      "test loss, test acc:  [0.003418305655941367, 0.9993358850479126, 0.5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = dl_model.evaluate(x_test_tf, y_test_tf, batch_size=128)\n",
+    "print(\"test loss, test acc: \", result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dl_prediction = dl_model.predict(x_test_tf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import roc_curve, auc, confusion_matrix\n",
+    "from sklearn.model_selection import cross_validate\n",
+    "\n",
+    "\n",
+    "def generate_deep_learning_scores(y_predicted, file_name):\n",
+    "\n",
+    "    fpr, tpr, thresholds = roc_curve(y_test, y_predicted, pos_label=1)\n",
+    "    auc_tr = auc(fpr, tpr)\n",
+    "\n",
+    "    confusion_matrix_df = pd.crosstab(\n",
+    "        pd.Series(y_predicted, name=\"Predicted\"), pd.Series(y_test, name=\"Actual\"))\n",
+    "\n",
+    "    TN, FP, FN, TP = confusion_matrix(y_test, y_predicted).ravel()\n",
+    "    percent_of_FP = (FP / (FP+TN)) * 100\n",
+    "\n",
+    "    path = \"./metrics/\" + file_name + \".txt\"\n",
+    "\n",
+    "    with open(path, \"w\") as file:\n",
+    "        file.writelines([file_name,\n",
+    "                         \"\\n\\nConfusion Matrix\\n\",\n",
+    "                         confusion_matrix_df.to_string(),\n",
+    "                         \"\\n\\nTN:\\t\" + str(TN),\n",
+    "                         \"\\nTP:\\t\" + str(TP),\n",
+    "                         \"\\nFN:\\t\" + str(FN),\n",
+    "                         \"\\nFP:\\t\" + str(FP),\n",
+    "                         \"\\n\\nPecent of FP:\\t%\" + str(percent_of_FP),\n",
+    "                         ])\n",
+    "\n",
+    "    with open(path, \"r\") as file:\n",
+    "        print(file.read())\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dl_prediction = np.argmax(dl_prediction, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Keras\n",
+      "\n",
+      "Confusion Matrix\n",
+      "Actual         0      1\n",
+      "Predicted              \n",
+      "0          25376     26\n",
+      "1             12  31806\n",
+      "\n",
+      "TN:\t25376\n",
+      "TP:\t31806\n",
+      "FN:\t26\n",
+      "FP:\t12\n",
+      "\n",
+      "Pecent of FP:\t%0.047266425082716244\n"
+     ]
+    }
+   ],
+   "source": [
+    "generate_deep_learning_scores(dl_prediction, \"Keras\")"
    ]
   }
  ],
